@@ -15,6 +15,16 @@ Fix: rt.cpan.org #11930
      Incorrect searchlist duplication removal in Net::DNS::Resolver::Win32 
      Patch courtesy Risto Kankkunen.
 
+Problem: rt.cpan.org #11931
+
+     Win32.pm used the DNSRegisteredAdapters registry key to determine which
+     local forwarders to send queries to. This is arguably the wrong key as it
+     is used to identify the server which to send dynamic updates to.
+
+     A real fix for determining the set of nameservers to query has not been
+     implemented. For details see 
+     https://rt.cpan.org/Ticket/Display.html?id=11931
+
 
 *** 0.48_02 March 14, 2005 (Version 0.49 release candidate 2)
 
